--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#112d49</color>
+    <color name="colorPrimaryDark">#051421</color>
+    <color name="colorAccent">#4892f2</color>
     <color name="background">#f5f5f5</color>
     <color name="dark_background">#FF424242</color>
 
