--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -31,7 +31,7 @@
             tools:text="Applicant Details" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/sectionRecyclerView"
+            android:id="@+id/contentRecyclerView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
