--- a/app/src/main/res/layout/fragment_content_detail.xml
+++ b/app/src/main/res/layout/fragment_content_detail.xml
@@ -42,7 +42,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="16dp">
 
                 <ProgressBar
                     android:layout_width="0dp"
