Showing marker icon in map is done

--- a/app/src/main/res/layout/fragment_detail_header.xml
+++ b/app/src/main/res/layout/fragment_detail_header.xml
@@ -29,19 +29,28 @@
 
         <LinearLayout
             android:id="@+id/mapContainerLayout"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/map_container_background"
             android:orientation="horizontal"
+            android:padding="1dp"
             app:layout_constraintBottom_toBottomOf="@+id/blankView"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/mapView"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
         <View
             android:id="@+id/blankView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/typeImageView" />
 
