--- a/app/src/main/res/layout/loading_state.xml
+++ b/app/src/main/res/layout/loading_state.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{resource.message}"
+            android:textSize="16sp"
             app:goneVisible="@{resource.status.equalsIgnoreCase(NetworkStatusKt.FAILED)}" />
     </LinearLayout>
 </layout>
