--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -25,35 +25,55 @@
             android:orientation="vertical"
             android:paddingBottom="16dp">
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_margin="16dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_logo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:loadImage="@{movieItem.getImageUrl}" />
+
+
             <TextView
                 android:id="@+id/title_text"
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="@{movieItem.title}"
                 app:layout_constraintEnd_toStartOf="@+id/bookmarkImageButton"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title" />
+                app:layout_constraintStart_toEndOf="@+id/image"
+                app:layout_constraintTop_toTopOf="@+id/image"
+                tools:text="Title \n title " />
 
             <TextView
-                android:id="@+id/overview_text"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:layout_width="0dp"
+                android:id="@+id/releaseText"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:maxLines="3"
-                android:text="@{movieItem.overview}"
-                app:layout_constraintEnd_toEndOf="@+id/title_text"
+                android:layout_marginTop="16dp"
+                android:gravity="bottom"
+                android:text="@{@string/release + movieItem.release_date}"
                 app:layout_constraintStart_toStartOf="@id/title_text"
                 app:layout_constraintTop_toBottomOf="@+id/title_text"
-                tools:text="overView" />
+                tools:text="Released on: 12/01/2020" />
+
+            <TextView
+                android:id="@+id/ratingText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="@{@string/rating + String.valueOf(movieItem.vote_average)}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                app:layout_constraintBottom_toBottomOf="@id/releaseText"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="Rating: 5.9" />
+
 
             <ImageButton
                 android:id="@+id/bookmarkImageButton"
