Showing the progress bar till the page gets visible is done

--- a/app/src/main/res/layout/activity_app_bar.xml
+++ b/app/src/main/res/layout/activity_app_bar.xml
@@ -9,6 +9,7 @@
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
@@ -16,10 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include
-            layout="@layout/toolbar_layout"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        <include layout="@layout/toolbar_layout" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
