--- a/app/src/main/res/layout/loading_state.xml
+++ b/app/src/main/res/layout/loading_state.xml
@@ -4,7 +4,7 @@
 
     <data>
 
-        <import type="com.livtech.common.core.network.NetworkStatusKt" />
+        <import type="com.livtech.common.core.network.NetworkStatus" />
 
         <variable
             name="resource"
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:goneVisible="@{resource.status.equalsIgnoreCase(NetworkStatusKt.LOADING)}" />
+            app:goneVisible="@{resource.status==NetworkStatus.LOADING}" />
 
         <TextView
             android:id="@+id/error_msg"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="@{resource.message}"
             android:textSize="16sp"
-            app:goneVisible="@{resource.status.equalsIgnoreCase(NetworkStatusKt.FAILED)}"
+            app:goneVisible="@{resource.status==NetworkStatus.FAILED}"
             tools:text="Something went wrong" />
     </LinearLayout>
 </layout>
