--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#112d49</color>
     <color name="colorPrimaryDark">#051421</color>
     <color name="colorAccent">#4892f2</color>
+    <color name="colorMessage">#BBDEFB</color>
     <color name="background">#f5f5f5</color>
     <color name="dark_background">#FF424242</color>
 
