--- a/app/src/main/res/layout/list_item_thread.xml
+++ b/app/src/main/res/layout/list_item_thread.xml
@@ -12,6 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp">
 
